# extralo

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: ci-cd.yml
dev/: index.html
docs/reference/: etl.md  index.md
docs/user/: index.md  logging.md  usage.md  validate.md
docs_src/user/: .gitignore  basic_etl.py  basic_etl_with_logging.py  basic_etl_with_logging_config.py  basic_etl_with_validation.py  fake_data.py  logging.json  models.py  models_fixed.py  query.py  transformer.py
reference/: index.html
reference/etl/: index.html
src/extralo/: __init__.py  destination.py  destinations.py  etl.py  models.py  source.py  sources.py  transformer.py  transformers.py  typing.py
src/extralo/destinations/: __init__.py  delta_lake.py  file.py  memory.py  null.py  sql.py
src/extralo/sources/: __init__.py  delta_lake.py  file.py  sql.py
src/extralo/transformers/: null.py
src/pyetl/: __init__.py  etl.py
tests/: conftest.py  test_etl.py  test_model.py
tests/destinations/: test_deltalake.py  test_file.py  test_memory.py  test_null.py  test_sql.py
tests/sources/: test_delta_lake.py  test_file.py  test_sql.py
tests/transformers/: test_null.py
user/: index.html
user/logging/: index.html
user/usage/: index.html
user/validate/: index.html
